2012-10-23  Romain Francois  <romain@r-enthusiasts.com>

	* src/RcppBDTdu.cpp: using bdtDu* instead of object<bdtDu> for function returns

2012-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDTdt.h:

	* src/RcppBDTpt.cpp: Comparison and arithmethic support for posix time
	* R/zzz.R: associated S4 methods

	* inst/include/RcppBDTdt.h: New file for declaration of time zone class
	* inst/include/RcppBDTpt.h: New file for declaration of posix time class
	* inst/include/RcppBDTdu.h: New file for declaration of duration class
	* inst/include/RcppBDTtz.h: New file for declaration of time zone class

2012-10-22  Romain Francois  <romain@r-enthusiasts.com>

	* src/RcppBDTdu.cpp: implementing functions hours, minutes, ... and
	operators +,-(du, du) *,/(du,int)
	* R/zzz.R: associated S4 methods

2012-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTdu.cpp: Added method to add posix time, and return the
	resulting posix time object permitting simple mix of duration and time

	* src/RcppBDTpt.cpp: Added addHours(), addMinutes(), addSeconds() and
	addFractionalSeconds() to posix time class, shadowing Boost's side
	* src/RcppBDTpt.cpp: Added constructor from numeric

2012-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTdt.cpp: Rewrite of the initial Date functionality in the
	style of the three recently added classes which simplifies things
	greatly; new class transparently replaces old class

2012-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: Added show() and format() methods for the ptime, du and tz
	modules

2012-09-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDT.h: Added declarations for two new templated
	converters as<>() and wrap() for the boost::posix_time::ptime class
	* src/RcppBDTpt.cpp (Rcpp): Added implementation for new templated
	converters as<>(), wrap() for the boost::posix_time::ptime class;
	simplified existing code by using them; and added new setter from the
	R Datetime class as well
