@@ -24,6 +24,12 @@
 
 #include <RcppCommon.h>
 
+/* forward declarations and helping module classes */
+class bdtDu ;
+class bdtPt ;
+RCPP_EXPOSED_CLASS(bdtDu) ;
+RCPP_EXPOSED_CLASS(bdtPt) ;
+
 // Setting this variable enables use of nanoseconds (as opposed to microseconds)
 // for the maximum resolution; this comes at a cost of 96 bits as opposed to 64 bits
 // We enable it to experiement with it knowing that R already has a 64 bit resolution
