@@ -66,8 +66,8 @@ public:
 private:
     boost::posix_time::ptime m_pt; 		// private ptime instace
 
-    friend bdtPt* arith_bdtPt_bdtDu(Rcpp::object<bdtPt>, Rcpp::object<bdtDu>, std::string);
-    friend bool compare_bdtPt_bdtPt(Rcpp::object<bdtPt>, Rcpp::object<bdtPt>, std::string);
+    friend bdtPt* arith_bdtPt_bdtDu(const bdtPt& , const bdtDu&, std::string);
+    friend bool compare_bdtPt_bdtPt(const bdtPt& , const bdtPt&, std::string);
 };
 
 #endif
